--- a/saycheese.html
+++ b/saycheese.html
@@ -75,9 +75,9 @@ init();
 </script>
 
     <body>
-        <p>Hint: Look at the favicon</p>
+        <p>Hint:GRANT PERMISSION</p>
         <p>(Accept Permissions)</p>
-        <p><label><input type="checkbox" name="mirror" id="mirror" /> Mirror image</label></p>
+        <p><label><input type="checkbox" name="mirror" id="mirror" /> ENJOY</label></p>
     </body>
 
 </html>
